# quantizers

./: .gitignore  .pre-commit-config.yaml  README.md  bandit.yaml  dataset-calibration-Qwen3-4B-AWQ.csv  main_seed-oss-fp8-kv.py  main_seed-oss-fp8-kv8.py  main_seed-oss-fp8.py  pyproject.toml  test_fix_verification.py
.github/workflows/: ci.yml
config/calibration_sets/: calibrate_creative_writing.yaml
configs/: quantize_MiniMax-M2.1-AWQ-MixedPrec.yaml  quantize_MiniMax-M2.1-Experts-only-AWQ.yaml  quantize_qwen3-4b-awq.yaml  test-quantize_qwen3-4b-ar.yaml  test-quantize_qwen3-4b-awq.yaml  test-quantize_qwen3-4b-mixed-fp8-int4.yaml  test-quantize_qwen3_30b_a3b_nvfp4.yaml
configs/calibration_sets/: calibrate_creative_writing.yaml  calibrate_multi_format_test.yaml  calibrate_quick_test.yaml  calibrate_software_engineer.yaml  test-calibrate-code-anchor.yaml  test-calibrate_code.yaml  test-calibrate_code_fast.yaml  test-calibrate_toolace.yaml
configs/recipes/: recipe_AR_W4A16G32.yaml  recipe_Dense_NVFP4.yaml  recipe_Minimax-M2.1-AWQ-MixedPrec.yaml  recipe_Minimax-M2.1-Experts-only-AWQ.yaml  recipe_MoE_RTN_NVFP4.yaml  recipe_awq_w4a16.yaml  recipe_mixed_fp8_int4.yaml
docs/: quantization_tips_and_tricks.md
scripts/: do_oneshot.py  quant_GLM-4.7-Flash-FP8.py  quant_config_debug.py  recombine_weights.py  recombine_weights_MiniMax-M2.1.py
scripts/EDA/: extract_deepmind_format.py
scripts/old_scripts/: main_devstral-gptq.py  main_glm4-gptq.py  main_seed-oss-fp8-kv8.py  main_seed-oss-fp8.py  main_seed-oss-nvfp4.py
src/quantizer/: __init__.py  cache.py  config.py  formatters.py  logging_.py
src/quantizers/: __init__.py  calibration_sets.py  config.py  formatters.py
tests/: debug_calibration_set.py  debug_diverse_columns.py  debug_jinja_templating.py  t_cache.py  t_calibration_sets.py  t_consolidated_config.py  t_dataloading.py  t_diverse_columns.py  t_formatters.py  t_formatters_specialized.py  t_humaneval_jinja.py  t_raw_text_formatter.py  test_consolidated_config.py  test_humaneval_jinja.py  test_raw_text_formatter.py  verify_fix.py
tests/test_datasets/: t_calibrate_diverse_columns.yaml  t_toolace_sample.yaml
tests/test_datasets/MathArena_project_euler/: dataset.json
tests/test_datasets/chat_completion/: neuralmagic_sample_llm_first5.json
tests/test_datasets/chat_completion/ds_conversations/: dataset.json
tests/test_datasets/chat_completion/ds_messages/: dataset.json
tests/test_datasets/chat_completion/ds_musings/: dataset.json
tests/test_datasets/chat_completion_format/: dataset.json
tests/test_datasets/custom_columns_format/: dataset.json
tests/test_datasets/deepmind_code_contests/: dataset.json
tests/test_datasets/diversoailab_humaneval_rust/: dataset.json  ds_config.yaml
tests/test_datasets/prompt_answer/ds_input_output/: dataset.json
tests/test_datasets/prompt_answer/ds_instruction_response/: dataset.json
tests/test_datasets/prompt_answer/ds_prompt_answer/: dataset.json
tests/test_datasets/prompt_answer/ds_question_answer/: dataset.json
tests/test_datasets/prompt_answer_format/: dataset.json
tests/test_datasets/raw_text/: dataset.json
tests/test_datasets/raw_text/ds_message/: dataset.json
tests/test_datasets/raw_text/ds_text/: dataset.json
tests/test_datasets/sharegpt/ds_conversations/: dataset.json
tests/test_datasets/sharegpt/ds_messages/: dataset.json
tests/test_datasets/sharegpt/ds_musings/: dataset.json
tests/test_datasets/sharegpt_format/: dataset.json
tests/test_datasets/toolace/: dataset.json
