[project]
name = "quantizers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressed-tensors>=0.13.0",
    "llmcompressor >= 0.9.0",
    # "compressed-tensors@git+https://github.com/vllm-project/compressed-tensors",
    # "llmcompressor@git+https://github.com/vllm-project/llm-compressor",
    # "compressed-tensors",
    # "llmcompressor",
    "torch >= 2.8.0",
    "transformers >= 4.57.3, < 4.58.0",
    "zstandard>=0.23.0",
    "mistral-common >= 1.6.2",
    "huggingface_hub",
    "accelerate >= 1.10.1",
    "fla-core",
    "flash-linear-attention",
    # "causal-conv1d",
    "datasets>=4.4.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu129"}]
torchaudio = [{ index = "pytorch-cu129"}]
torchvision = [{ index = "pytorch-cu129"}]
# compressed-tensors = { path = "../compressed-tensors" }
# llmcompressor = { path = "../llm-compressor" }

# uv pip install -U --prerelease allow torch torchvision torchaudio --index-url https://download.pytorch.org/whl/nightly/cu129
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]

# Test configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["t_*.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]


[tool.black]
extend-exclude = "scripts/old_scripts/"
